syntax = "proto3";
package counter;
option go_package="github.com/ghosx/tinyurl/gen/go/proto/counter";

service Counter {
    rpc GetCount (CounterRequest) returns (CounterResponse);
}


message CounterRequest {
    uint64 current = 1;
    uint64 count = 2;
}


message CounterResponse {
    uint64 start = 1;
    uint64 end = 2;
}